# bookstore

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: admin.py  factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/test/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/test/test_serializers/: test_product_serializer.py
product/test/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
